Add new facility map based on modded one but better sized for LW
also works for ATT supply raids

--- a/LongWarOfTheChosen/Config/XComPlots.ini
+++ b/LongWarOfTheChosen/Config/XComPlots.ini
@@ -83,6 +83,12 @@
 	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
 	ObjectiveTags[0]="Sabotage", ObjectiveTags[1]="SecureUFO", ObjectiveTags[2]="GP_PsiGate")
 
+; New modified one from map pack:
+
++arrPlots=(MapName="Plot_WLD_Advent_MdObj_VozTed", strType="Wilderness", \\
+    ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+    ObjectiveTags[0]="SupplyRaidATT", ObjectiveTags[1]="Sabotage")
+
 ; new Supply Extraction plots
 +arrPlots=(MapName="Plot_WLD_SupplyExtract_Ravine_Ted", strType="Wilderness", ObjectiveTags[0]="SupplyExtraction", ObjectiveTags[1]="BigSupplyExtraction", ObjectiveTags[2]="LargePlot")
 +arrPlots=(MapName="Plot_WLD_SupplyExtract_Ravine_Ted_Trn", strType="Wilderness", ObjectiveTags[0]="SupplyExtraction", ObjectiveTags[1]="BigSupplyExtraction", ObjectiveTags[2]="LargePlot")
