Some AI tweaks for consistency
* High Priority check now has an aim check added (60% minimum), should stop AI from doing dumb things sometimes because someone is flanked
* Sectopod Lightning Field behavior changed, it now checks for enemies within the radius
* Drone AI changed to explicitly move towards unconcealed enemies for first moves.
* Changed the array that FindDestinationWithLoS-MWP_VeryAggressive is added to for MJ/TJ bugfixing

I've done some testing of these trees, will be doing more, please report any weird behaviors

--- a/LongWarOfTheChosen/Config/XComAI.ini
+++ b/LongWarOfTheChosen/Config/XComAI.ini
@@ -33,7 +33,7 @@
 
 ; Make stun lance not target lost and edit scoring to target low HP instead of high HP
 +BehaviorRemovals="EvaluateTargetForStunLance"
-+NewBehaviors=(BehaviorName=EvaluateTargetForStunLance, NodeType=Sequence, Child[0]=TargetScoreHitChance, Child[1]=TargetScoreHealth, Child[2]=TargetScoreMarked, Child[3]=AvoidBoundAndPanickedTargets, Child[4]=TargetScoreCivilian, Child[5]=SSTeamSpecificModifiers, Child[6]=SSScoreTargetOutIfLost)
++NewBehaviors=(BehaviorName=EvaluateTargetForStunLance, NodeType=Sequence, Child[0]=TargetScoreHitChance, Child[1]=IsVisibleToPlayer, Child[2]=TargetScoreHealth, Child[3]=TargetScoreMarked, Child[4]=AvoidBoundAndPanickedTargets, Child[5]=TargetScoreCivilian, Child[6]=SSTeamSpecificModifiers, Child[7]=SSScoreTargetOutIfLost)
 
 
 ; Shieldbearer Last Resort Red Action fix
@@ -176,6 +176,14 @@
 +BehaviorRemovals="AdvCaptain_RedLastActionSelector"
 +NewBehaviors=(BehaviorName=AdvCaptain_RedLastActionSelector, NodeType=Selector, Child[0]=AdvCaptainTryGrenade, Child[1]=TryHighPriorityShot, Child[2]=TryMarkTargetOption, Child[3]=TryShootOrReloadOrOverwatch, Child[4]=HuntEnemyWithCover, Child[5]=SelectMove_JobOrDefensive)
 
+; Big one from Reshi: tweak melee targeting to check visiblity
+
++BehaviorRemovals="ScoreClosestEnemyIfInRange"
++BehaviorRemovals="EvaluatePotentialMeleeTarget"
+
++NewBehaviors=(BehaviorName=EvaluatePotentialMeleeTarget, NodeType=Sequence, Child[0]=SetNextTarget, Child[1]=IsVisibleToPlayer, Child[2]=TargetScoreClosestIfInRange, Child[3]=AvoidBoundAndPanickedTargets, Child[4]=TargetScoreCivilian, Child[5]=SSCustomMeleeTargetScore, Child[6]=UpdateBestTarget)
++NewBehaviors=(BehaviorName=ScoreClosestEnemyIfInRange, NodeType=Sequence, Child[0]=TargetIsEnemy, Child[1]=IsVisibleToPlayer, Child[2]=TargetIsNotFacelessCivilian, Child[3]=IsTargetInMovementRange-StandardMelee, Child[4]=TargetScoreByScaledDistance-1, Child[5]=AddToTargetScore_100, Child[6]=AvoidBoundAndPanickedTargets)
+
 ; ----------------------------------------------------------------------------------------------------------
 ; --------------------------- ADVENT SHIELDBEARER --------------------------------------------------
 ; ---------------------------------------------------------------------------------------------------------- 
@@ -217,7 +225,7 @@
 +NewBehaviors=(BehaviorName=SectopodSecondActionSelector, NodeType=Selector,\\
 	Child[0]=SectopodCannonCharging, \\
 	Child[1]=TryStandUp,\\
-	Child[2]=TryLightningField, \\
+	Child[2]=TrySmartLightningField, \\
 	Child[3]=ShootWhenFlanking, \\
 	Child[4]=NeedsReload, \\
 	Child[5]=TryMoveForLightningField, \\
@@ -228,7 +236,7 @@
 +BehaviorRemovals="SectopodRedLastActionSelector"
 +NewBehaviors=(BehaviorName=SectopodRedLastActionSelector, NodeType=Selector, \\
 	Child[0]=SectopodCannonCharging, \\
-	Child[1]=TryLightningField, \\
+	Child[1]=TrySmartLightningField, \\
 	Child[2]=ShootWhenFlanking, \\
 	Child[3]=TryWrathCannonS1, \\
 	Child[4]=TryShootOrReloadOrOverwatch, \\
@@ -251,15 +259,18 @@
 +NewBehaviors=(BehaviorName=TargetScoreClosestLF, NodeType=Successor, Child[0]=ScoreClosestLF)
 +NewBehaviors=(BehaviorName=ScoreClosestLF, NodeType=Sequence, Child[0]=TargetIsClosestValidTarget, Child[1]=IsTargetInMovementRange-SectopodLightningField, Child[2]=AddToTargetScore_500)
 
-+BehaviorRemovals="TryLightningField"
-+NewBehaviors=(BehaviorName=TryLightningField, NodeType=Sequence, Child[0]=IsAbilityAvailable-SectopodLightningField, Child[1]=HasAnyLightningFieldTargets, Child[2]=IsLightningFieldOn, Child[3]=SelectAbility-SectopodLightningField, Child[4]=SetLightningFieldOff)
+;+BehaviorRemovals="TryLightningField"
 
+
+
++NewBehaviors=(BehaviorName=TrySmartLightningField, NodeType=Sequence, Child[0]=IsAbilityAvailable-StandardShot, Child[1]=IsAbilityAvailable-SectopodLightningField, Child[2]=SelectNearestUnconcealedTarget, Child[3]=TargetWithinLightningFieldRange, Child[4]=SelectAbility-SectopodLightningField)
++NewBehaviors=(BehaviorName=TargetWithinLightningFieldRange, NodeType=StatCondition, Param[0]=PotentialTargetDistance, Param[1]="<", Param[2]=6)
 ; ----------------------------------------------------------------------------------------------------------
 ; --------------------------- ADVENT PURIFIER --------------------------------------------------
 ; ----------------------------------------------------------------------------------------------------------
 
-+NewBehaviors=(BehaviorName=FindDestinationWithLoS-MWP_VeryAggressive, NodeType=Action)
-+NewBehaviors=(BehaviorName=MoveVeryAggressiveUnsafe, NodeType=Sequence, Child[0]=IsAbilityAvailable-StandardMove, Child[1]=ResetDestinationSearch, Child[2]=FindDestinationWithLoS-MWP_VeryAggressive, Child[3]=SelectAbility-StandardMove)
+
+
 +NewBehaviors=(BehaviorName=PurifierRedLastActionSelector, NodeType=Selector, \\
 	Child[0]=FlameThrowerPriorityOption, \\
 	Child[1]=TryFlameThrower, \\
@@ -532,6 +543,11 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 +CustomNodes=(NodeTypeString="LWAction", ExtendsFromType="Action", ClassName="LW_Overhaul.X2AIBehavior_LW")
 ; +CustomNodes=(NodeTypeString="DLC3Action", ExtendsFromType="Action", ClassName="DLC_3.X2AIBT_DLC_90Actions")
 
+; Added new behaviors
++Behaviors=(BehaviorName=SetBestTargetAsCurrentTarget-StandardShot, NodeType=Action)
++Behaviors=(BehaviorName=FindDestinationWithLoS-MWP_VeryAggressive, NodeType=Action)
++Behaviors=(BehaviorName=MoveVeryAggressiveUnsafe, NodeType=Sequence, Child[0]=IsAbilityAvailable-StandardMove, Child[1]=ResetDestinationSearch, Child[2]=FindDestinationWithLoS-MWP_VeryAggressive, Child[3]=SelectAbility-StandardMove)
++Behaviors=(BehaviorName=SelectNearestUnconcealedTarget, NodeType=Action)
 
 ; Change the AI flanking condition to exclude shields
 
@@ -653,7 +669,8 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 +Behaviors=(BehaviorName=FindHighPriorityTarget, NodeType=RepeatUntilFail, Child[0]=NotHighPriorityEvaluateTarget)
 +Behaviors=(BehaviorName=NotHighPriorityEvaluateTarget, NodeType=Sequence, Child[0]=SetNextTarget, Child[1]=TargetIsNotHighPriority)
 +Behaviors=(BehaviorName=TargetIsNotHighPriority, NodeType=Inverter, Child[0]=TargetIsHighPriority)
-+Behaviors=(BehaviorName=TargetIsHighPriority, NodeType=Sequence, Child[0]=TargetIsNotCivilian, Child[1]=TargetIsNotLost, Child[2]=TargetKillableOrFlanked, Child[3]=AddToTargetScore_1000, Child[4]=UpdateBestTarget)
++Behaviors=(BehaviorName=TargetIsHighPriority, NodeType=Sequence, Child[0]=TargetHitChanceHigh, Child[1]=TargetIsNotCivilian, Child[2]=TargetIsNotLost, Child[3]=TargetKillableOrFlanked, Child[4]=AddToTargetScore_1000, Child[5]=UpdateBestTarget)
++Behaviors=(BehaviorName=KillShotEvaluateTarget, NodeType=Sequence, Child[0]=SetNextTarget, Child[1]=TargetHitChanceHigh, Child[2]=TargetIsKillShot)+Behaviors=(BehaviorName=TargetKillableOrFlanked, NodeType=Selector, Child[0]=TargetIsKillable,  Child[1]=IsFlankingTargetWithoutShield)
 +Behaviors=(BehaviorName=TargetKillableOrFlanked, NodeType=Selector, Child[0]=TargetIsKillable,  Child[1]=IsFlankingTargetWithoutShield)
 
 ; -------------- High priority target shooting (LEU Version) (shoot if kill or target flanked/exposed) -------------
@@ -670,7 +687,7 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 +Behaviors=(BehaviorName=HaveKillShotTarget, NodeType=Sequence, Child[0]=SetTargetStack-StandardShot, Child[1]=FindKillShotTarget)
 +Behaviors=(BehaviorName=FindKillShotTarget, NodeType=RepeatUntilFail, Child[0]=NotKillShotEvaluateTarget)
 +Behaviors=(BehaviorName=NotKillShotEvaluateTarget, NodeType=Inverter, Child[0]=KillShotEvaluateTarget)
-+Behaviors=(BehaviorName=KillShotEvaluateTarget, NodeType=Sequence, Child[0]=SetNextTarget, Child[1]=TargetIsKillShot)
+;+Behaviors=(BehaviorName=KillShotEvaluateTarget, NodeType=Sequence, Child[0]=SetNextTarget, Child[1]=TargetIsKillShot)
 +Behaviors=(BehaviorName=TargetIsKillShot, NodeType=Sequence, Child[0]=TargetIsKillable)
 
 ; ---------------- LightEmUp (MutonM3_LW, Elite) --------------------------------------------
@@ -1194,23 +1211,22 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 
 +Behaviors=(BehaviorName=LWDroneRedFirstAction, NodeType=Sequence, Child[0]=NotLastActionPoint, Child[1]=LWDroneRedFirstActionSelector)
 +Behaviors=(BehaviorName=LWDroneRedFirstActionSelector, NodeType=Selector, \\
-	Child[0]=HuntEnemyUnsafe, \\
-	Child[1]=TryHighPriorityShock, \\
-	Child[2]=TryMoveForDroneRepair, \\
-	Child[3]=TryMoveForDroneMeleeStun, \\
-	Child[4]=TryDroneFlankingMove, \\
-	Child[5]=TryDroneRegularMove, \\
-	Child[6]=HuntEnemyUnsafe)
-
+    Child[0]=SelectHeatSeekMoveNoDash, \\
+    Child[1]=TryHighPriorityShock, \\
+    Child[2]=TryMoveForDroneRepair, \\
+    Child[3]=TryMoveForDroneMeleeStun, \\
+    Child[4]=TryDroneFlankingMove, \\
+    Child[5]=TryDroneRegularMove, \\
+    Child[6]=SelectHeatSeekMoveNoDash)
 
 +Behaviors=(BehaviorName=LWDroneRedLastAction, NodeType=Sequence, Child[0]=IsLastActionPoint, Child[1]=LWDroneRedLastActionSelector)
 +Behaviors=(BehaviorName=LWDroneRedLastActionSelector, NodeType=Selector, \\
-	Child[0]=TryMeleeStun, \\
-	Child[1]=TryHighPriorityShock, \\
-	Child[2]=TryRepairOrShock, \\
-	Child[3]=ShockIfAvailable, \\
-	Child[4]=HuntEnemyUnsafe, \\
-	Child[5]=TryDroneRegularMove)
+    Child[0]=TryMeleeStun, \\
+    Child[1]=TryHighPriorityShock, \\
+    Child[2]=TryRepairOrShock, \\
+    Child[3]=ShockIfAvailable, \\
+    Child[4]=SelectHeatSeekMoveNoDash, \\
+    Child[5]=TryDroneRegularMove)
 
 
 +Behaviors=(BehaviorName=TryDroneFlankingMove, NodeType=Sequence, Child[0]=IsMyJob-Soldier, Child[1]=IsAbilityAvailable-StandardMove, Child[2]=ResetDestinationSearch, Child[3]=RestrictToFlanking, Child[4]=SetNoCoverMovement, Child[5]=RestrictToAbilityRange-LWDroneShock, Child[6]=SelectAbility-StandardMove)
