Fix encounterlist name typo

--- a/LongWarOfTheChosen/Config/XComEncounters.ini
+++ b/LongWarOfTheChosen/Config/XComEncounters.ini
@@ -533,7 +533,7 @@
 						MaxRequiredForceLevel = 16, \\
 						ForceSpawnTemplateNames[0]="MutonM3_LW", \\
 						ForceSpawnTemplateNames[1]="AdvShieldbearerM2", \\
-						ForceSpawnTemplateNames[2]="AdvMec_M3", \\
+						ForceSpawnTemplateNames[2]="AdvMec_M3_LW", \\
 						ForceSpawnTemplateNames[3]="AdvPriestM3")
 
 +ConfigurableEncounters=(EncounterID="VerySmall_Supply_Command_Pod_Late_PROTECTED", \\
