Mark another ability for spark sacrifice

--- a/LongWarOfTheChosen/Config/XComGameData_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComGameData_SoldierSkills.ini
@@ -338,3 +338,4 @@ SHREDSTORM_TILE_WIDTH=11
 [DLC_3.X2Effect_DLC_3SacrificeShield]
 +IgnoreAbilities="TrackingShotMark"
 +IgnoreAbilities="TrackingShot"
++IgnoreAbilities="MarkedForDeath_Hunter"
