new Prototype Plasma Blaster Heavy weapon
Adds a new starting weapon to compete with shredder guns.
Has 2 ammo, base damage of 6, 2 spread, 3 crit, 1 pierce, 1 rupture.
Same targeting ability style as plasma blaster, 1 tile width, vision range.

--- a/LongWarOfTheChosen/Config/XComGameData.ini
+++ b/LongWarOfTheChosen/Config/XComGameData.ini
@@ -2018,6 +2018,8 @@ ReactDelay=0.2
 +AUTOPISTOL_ANIMS_WEAPONCATS_EXCLUDED=sidearm
 +AUTOPISTOL_ANIMS_WEAPONCATS_EXCLUDED=sawedoff
 
++SparkHeavyWeaponAbilitiesForBit="PrototypePlasmaBlaster"
+
 [Chosen_Assassin X2AdventChosenTemplate]
 
 ChosenImages[0]="img:///UILibrary_XPACK_Common.AdventChosen_Assassin_1"
