--- a/LongWarOfTheChosen/Config/XComGameData_WeaponData.ini
+++ b/LongWarOfTheChosen/Config/XComGameData_WeaponData.ini
@@ -2560,6 +2560,18 @@ SPARK_POWERED_LIGHT_DEF_BONUS=15
 TIER3_LIGHTSTRIKE_DMG = (Damage=12, Spread=0, PlusOne=0, Crit=6, Pierce=0, Shred=0, Tag="", DamageType="Melee")
 TIER3_LIGHTINTIMIDATE_STRENGTH = 60
 
+; New prototype plasma blaster
+
+PROTOTYPEPLASMABLASTER_BASEDAMAGE = (Damage=6, Spread = 2, PlusOne = 0, Crit = 3, Pierce = 1, Shred=0, Rupture=1, Tag = "", DamageType="Projectile_BeamXCom")
+PROTOTYPEPLASMABLASTER_ISOUNDRANGE = 36
+PROTOTYPEPLASMABLASTER_IENVIRONMENTDAMAGE = 15
+
+PROTOTYPEPLASMABLASTER_IPOINTS = 100
+PROTOTYPEPLASMABLASTER_ICLIPSIZE = 2
+PROTOTYPEPLASMABLASTER_RANGE = 25
+PROTOTYPEPLASMABLASTER_RADIUS = 12
+
+
 [LW_WeaponsAndArmor.X2Ability_FactionWeaponAbilities]
 // ***** Mobility bonuses for Bullpups
 BULLPUP_CONVENTIONAL_MOBILITY_BONUS = 2
