--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -1116,6 +1116,7 @@ INSTANT_BUILD_TIMES=TRUE
 
 +ItemTable=(ItemTemplateName="ShredderGun",			Slots=0,Starting=true,	Infinite=true,	Buildable=false)
 +ItemTable=(ItemTemplateName="PlasmaBlaster",		Slots=0,Starting=false,	Infinite=false,	Buildable=true, RequiredTech1="PlasmaBlasterProject",	RequiredTech2="", SupplyCost=80,	AlloyCost=4,		CrystalCost=15, CoreCost=1, SpecialItemTemplateName="",	SpecialItemCost=0,	TradingPostValue=50, RequiredEngineeringScore=0, Tier = 178, PointsToComplete=200)
++ItemTable=(ItemTemplateName="PrototypePlasmaBlaster",			Slots=0,Starting=true,	Infinite=true,	Buildable=false)
 +ItemTable=(ItemTemplateName="ShredstormCannon",	Slots=0,Starting=false,	Infinite=false,	Buildable=true, RequiredTech1="ShredstormCannonProject",RequiredTech2="", SupplyCost=80,	AlloyCost=4,		CrystalCost=10, CoreCost=1, SpecialItemTemplateName="",	SpecialItemCost=0,	TradingPostValue=75, RequiredEngineeringScore=0, Tier = 168, PointsToComplete=200)
 
 +ItemTable=(ItemTemplateName="Medikit",				Slots=0,Starting=true,	Infinite=true,	Buildable=false, Weight=1)
