--- a/LongWarOfTheChosen/Config/XComGameData_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComGameData_SoldierSkills.ini
@@ -329,11 +329,11 @@ HUNTERGRAPPLE_COOLDOWN_NUM_TURNS=3
 EasyToHitMod=0
 
 [XComGame.X2Ability_HeavyWeapons]
-SHREDDER_GUN_TILE_LENGTH=11
-SHREDSTORM_TILE_LENGTH=15
+SHREDDER_GUN_TILE_LENGTH=12
+SHREDSTORM_TILE_LENGTH=16
 
-SHREDDER_GUN_TILE_WIDTH=8
-SHREDSTORM_TILE_WIDTH=11
+SHREDDER_GUN_TILE_WIDTH=6
+SHREDSTORM_TILE_WIDTH=9
 
 [DLC_3.X2Effect_DLC_3SacrificeShield]
 +IgnoreAbilities="TrackingShotMark"
