--- a/LongWarOfTheChosen/Config/XComGameData_WeaponData.ini
+++ b/LongWarOfTheChosen/Config/XComGameData_WeaponData.ini
@@ -1,5 +1,5 @@
 [XComGame.X2Item_HeavyWeapons]
-FreeHeavyWeaponToEquip="ShredderGun"
+FreeHeavyWeaponToEquip="PrototypePlasmaBlaster"
 
 ShredderGun_BaseDamage =		(Damage=5, Spread = 2,	PlusOne = 50, Crit = 3, Pierce = 0, Shred=2, Tag = "", DamageType="Projectile_Conventional")
 ShredstormCannon_BaseDamage =	(Damage=8, Spread = 2,	PlusOne = 50, Crit = 4, Pierce = 0, Shred=4, Tag = "", DamageType="Projectile_BeamXCom")
