Add new heavy weapon to list of stuff to be checked for mid campaign creation

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -917,6 +917,7 @@ BLUESCREEN_DISORIENT_CHANCE=50
 +UnlimitedItemsAdded="Pistol_CV"
 +UnlimitedItemsAdded="Medikit"
 +UnlimitedItemsAdded="ShredderGun"
++UnlimitedItemsAdded="PrototypePlasmaBlaster"
 +UnlimitedItemsAdded="CeramicPlating"
 +UnlimitedItemsAdded="CasterGauntlet_CV"
 +UnlimitedItemsAdded="ThrowingKnife_CV_Secondary"
