Add Storm Eagle replacer to incompatible mods

--- a/LongWarOfTheChosen/Config/XComGame.ini
+++ b/LongWarOfTheChosen/Config/XComGame.ini
@@ -145,6 +145,7 @@ DisplayName="Long War of the Chosen"
 +IncompatibleMods="WOTCLW2PerkPack"
 +IncompatibleMods="LongWar2"
 +IncompatibleMods="[WOTC]EditedRagdollPhysicsandEffects"
++IncompatibleMods="StormEagleReplacer"
 
 +RequiredMods="X2WOTCCommunityHighlander"
 +RequiredMods="robojumperSquadSelect_WotC"
