Switch stronghold schedule encounterlists from Open to Default

--- a/LongWarOfTheChosen/Config/XComSchedules.ini
+++ b/LongWarOfTheChosen/Config/XComSchedules.ini
@@ -16131,8 +16131,8 @@
 
 +MissionSchedules=(ScheduleID="ChosenStronghold_D3_Short_LW", \\
 				  ExcludeTacticalTag="DisableStandardSchedules", \\
-				  DefaultEncounterLeaderSpawnList = "Open", \\
-				  DefaultEncounterFollowerSpawnList = "Open", \\
+				  DefaultEncounterLeaderSpawnList = "DefaultLeaders_LW", \\
+				  DefaultEncounterFollowerSpawnList = "DefaultFollowers_LW", \\
 				  MinRequiredAlertLevel=1, MaxRequiredAlertLevel=99, \\
 				  XComSquadStartsConcealed=false, \\
 				  IdealXComSpawnDistance=200, \\
