improve lick your wounds ability list
changes the ability list to trigger lick your wounds to a config list to improve compatibility

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -700,6 +700,9 @@ SensorOverlaysCritBonus = 10
 FocusedDefenseDefense = 20
 FocusedDefenseDodge = 20
 
++LICK_YOUR_WOUNDS_ALLOWED_ABILITIES = "HunkerDown"
++LICK_YOUR_WOUNDS_ALLOWED_ABILITIES = "ShieldWall" 
+
 [LW_PerkPack_Integrated.X2Effect_HitandRun]
 +HNR_ABILITYNAMES=StandardShot
 +HNR_ABILITYNAMES=LightEmUp
