--- a/LongWarOfTheChosen/Config/XComGame.ini
+++ b/LongWarOfTheChosen/Config/XComGame.ini
@@ -158,7 +158,7 @@ DisplayName="Long War of the Chosen"
 
 [WOTCRevertOverwatchRules.X2DownloadableContentInfo_WOTCRevertOverwatchRules]
 +OVERWATCH_TO_PATCH=AreaSuppressionShot_LW
-+OVERWATCH_TO_PATCH=PrimaryReturnFireShot
+; +OVERWATCH_TO_PATCH=PrimaryReturnFireShot
 ;+OVERWATCH_TO_PATCH=LeadTheTargetShot_LW
 
 [XModBase_Core_3_0_0 CHDLCRunOrder]
