Nerf reduce avatar project progress covert op
Decreases it from 3/2/2/2 to 2/1/1/1 for rookie/vet/commander/legend

--- a/LongWarOfTheChosen/Config/XComGameData.ini
+++ b/LongWarOfTheChosen/Config/XComGameData.ini
@@ -1008,6 +1008,13 @@ NobleCauseBonus[1]=30 ;Normal
 NobleCauseBonus[2]=30 ;Classic
 NobleCauseBonus[3]=30 ;Impossible
 
+[XComGame.X2StrategyElement_XpackRewards]
+
+RemoveDoomReward[0]=2 ;Easy
+RemoveDoomReward[1]=1 ;Normal
+RemoveDoomReward[2]=1 ;Classic
+RemoveDoomReward[3]=1 ;Impossible
+
 [XComGame.XComGameState_MissionCalendar]
 
 ;remove the base-game mission calendar missions, as the activity system replaces it
