Chameleon Suit now gives 1 HP and 5 dodge

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -805,6 +805,9 @@ BONUS_COILGUN_SHRED=1
 
 BLUESCREEN_DISORIENT_CHANCE=50
 
+CHAMELEON_VEST_HP_BONUS=1
+CHAMELEON_VEST_DODGE_BONUS=5
+
 [LW_Overhaul.LWTemplateMods]
 +SchematicsToDisable=AssaultRifle_LS_Schematic
 +SchematicsToDisable=AssaultRifle_MG_Schematic
