Swap Hunter's Tracking Shot for a new version
Fix edge case jank, no mark and long animation

--- a/LongWarOfTheChosen/Config/XComAI.ini
+++ b/LongWarOfTheChosen/Config/XComAI.ini
@@ -1570,38 +1570,42 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 +Behaviors=(BehaviorName="ChosenSniper::CharacterRoot", NodeType=Selector, Child[0]="::ChosenEngaged")
 +Behaviors=(BehaviorName="ChosenSniper::ChosenEngaged", NodeType=Selector, Child[0]=TryLWChosenkidnap, Child[1]=ChosenSniperFirstAction, Child[2]=ChosenSniperLastAction)
 
++Behaviors=(BehaviorName="TryTrackingShotLW", NodeType=Sequence, Child[0]=IsAbilityAvailable-TrackingShot_LW, Child[1]=SetTargetStack-TrackingShot_LW, Child[2]=SelectEnemyTargetRandomly_NonCivilianOrVIP, Child[3]=HasValidTarget-TrackingShot_LW, Child[4]=SelectAbility-TrackingShot_LW)
+
++Behaviors=(BehaviorName=IsAbilityAvailable-TrackingShot_LW, NodeType=Condition)
++Behaviors=(BehaviorName=SetTargetStack-TrackingShot_LW, NodeType=Action)
++Behaviors=(BehaviorName=HasValidTarget-TrackingShot_LW, NodeType=Condition)
++Behaviors=(BehaviorName=SelectAbility-TrackingShot_LW, NodeType=Action)
+
 +Behaviors=(BehaviorName="ChosenSniperFirstActionSelector", NodeType=Selector, \\
-			Child[0]=TryTrackingShotMark,\\
+			Child[0]=TryTrackingShotLW,\\
 			Child[1]=TryGrenade,\\
             Child[2]=TryLightningHands, \\
             Child[3]=ShootWhenFlanking_Pistol, \\
             Child[4]=TryGrappleForOffense,\\
             Child[5]=DoIfFlankedFallback, \\
-			Child[6]=TryTrackingShot,\\
-            Child[7]=TryFaceoff, \\
-            Child[8]=TakePriorityshotsChosen_Pistol, \\
-            Child[9]=HunterTakePriorityshotsChosen, \\
-            Child[10]=MoveChosenStayBack, \\
-			Child[11]=MaybeTryPistolShot, \\
-			Child[12]=MaybeTryHunterRifle, \\
-			Child[13]=ChosenCheatIfNoVisible, \\
-            Child[14]=TryShootOrReloadOrOverwatch,\\
-            Child[15]=HuntEnemy)
+            Child[6]=TryFaceoff, \\
+            Child[7]=TakePriorityshotsChosen_Pistol, \\
+            Child[8]=HunterTakePriorityshotsChosen, \\
+            Child[9]=MoveChosenStayBack, \\
+			Child[10]=MaybeTryPistolShot, \\
+			Child[11]=MaybeTryHunterRifle, \\
+			Child[12]=ChosenCheatIfNoVisible, \\
+            Child[13]=TryShootOrReloadOrOverwatch,\\
+            Child[13]=HuntEnemy)
 
 +Behaviors=(BehaviorName="ChosenSniperLastActionSelector", NodeType=Selector, \\
-			Child[0]=TryTrackingShotMark,\\
-			Child[1]=TryGrenade,\\
-			Child[2]=TryTrackingShot,\\
-            Child[3]=TryLightningHands, \\
-            Child[4]=TryFanFire, \\
-            Child[5]=TryGrappleForOffense,\\
-            Child[6]=HunterTakePriorityshotsChosen, \\
-            Child[7]=ShootWhenKillShot_Pistol, \\
-            Child[8]=ShootWhenFlanking_Pistol, \\
-            Child[9]=DoIfFlankedFallback, \\
-			Child[10]=MaybeTryHunterRifle, \\
-            Child[11]=TryShootOrReloadOrOverwatch,\\
-            Child[12]=SelectHeatSeekMoveNoDash)
+			Child[0]=TryGrenade,\\
+            Child[1]=TryLightningHands, \\
+            Child[2]=TryFanFire, \\
+            Child[3]=TryGrappleForOffense,\\
+            Child[4]=HunterTakePriorityshotsChosen, \\
+            Child[5]=ShootWhenKillShot_Pistol, \\
+            Child[6]=ShootWhenFlanking_Pistol, \\
+            Child[7]=DoIfFlankedFallback, \\
+			Child[8]=MaybeTryHunterRifle, \\
+            Child[9]=TryShootOrReloadOrOverwatch,\\
+            Child[10]=SelectHeatSeekMoveNoDash)
 
 +Behaviors=(BehaviorName=HunterReaction, NodeType=Selector, Child[0]=HunterFlankedPrimeMove, Child[1]=MaybeMoveIfNotFlanked, Child[2]=TryCombatReadinessIfMobDebuffed, Child[3]=TryTriggerDamagedTeleportIfFlanked, Child[4]=TryCombatReadiness)
 
