Redo technical custom rockets to use ExtraDamage
they scale with gauntlet tier now, but will need mapping for other classes.

--- a/LongWarOfTheChosen/Config/XComGameData_WeaponData.ini
+++ b/LongWarOfTheChosen/Config/XComGameData_WeaponData.ini
@@ -1413,6 +1413,10 @@ Gauntlet_CV_UIImage="img:///UILibrary_LWOTC.InventoryArt.Inv_Conv_LWGauntlet"
 Gauntlet_Primary_CONVENTIONAL_BASEDAMAGE=(Damage=3, Spread=1, PlusOne=50, Crit=0, Pierce=0, Shred=1, Tag="", DamageType="Explosion")
 Gauntlet_Secondary_CONVENTIONAL_BASEDAMAGE=(Damage=3, Spread=1, PlusOne=50, Crit=0, Pierce=0, Shred=0, Tag="", DamageType="Napalm")
 
++Gauntlet_Primary_CONVENTIONAL_EXTRADAMAGE=(Damage=1, Spread=0, PlusOne=50, Crit=0, Pierce=0, Shred=0, Tag="LWConcussionRocket", DamageType="Explosion")
++Gauntlet_Primary_CONVENTIONAL_EXTRADAMAGE=(Damage=2, Spread=0, PlusOne=50, Crit=0, Pierce=0, Shred=3, Rupture = 1, Tag="LWShredderRocket", DamageType="Explosion")
++Gauntlet_Primary_CONVENTIONAL_EXTRADAMAGE=(Damage=1, Spread=0, PlusOne=50, Crit=0, Pierce=0, Shred=0, Rupture = 0, Tag="LWEMPRocket", DamageType="Electrical")
+
 ; ***** Core properties and variables for XCom Gauntlet *****
 ; *** CONVENTIONAL ***
 ; Rocket Launcher
@@ -1437,6 +1441,10 @@ Gauntlet_MG_UIImage="img:///UILibrary_LWOTC.InventoryArt.Inv_Mag_PlatedGauntlet"
 Gauntlet_Primary_MAG_BASEDAMAGE=(Damage=5, Spread=1, PlusOne=50, Crit=0, Pierce=0, Shred=1, Tag="", DamageType="Explosion")
 Gauntlet_Secondary_MAG_BASEDAMAGE=(Damage=6, Spread=2, PlusOne=0, Crit=0, Pierce=0, Shred=0, Tag="", DamageType="Napalm")
 
++Gauntlet_Primary_MAG_EXTRADAMAGE=(Damage=2, Spread=0, PlusOne=50, Crit=0, Pierce=0, Shred=0, Tag="LWConcussionRocket", DamageType="Explosion")
++Gauntlet_Primary_MAG_EXTRADAMAGE=(Damage=3, Spread=0, PlusOne=50, Crit=0, Pierce=0, Shred=4, Rupture = 2, Tag="LWShredderRocket", DamageType="Explosion")
++Gauntlet_Primary_MAG_EXTRADAMAGE=(Damage=2, Spread=0, PlusOne=50, Crit=0, Pierce=0, Shred=0, Rupture = 0, Tag="LWEMPRocket", DamageType="Electrical")
+
 Gauntlet_Primary_MAG_ICLIPSIZE = 1
 Gauntlet_Primary_MAG_ISOUNDRANGE=39
 Gauntlet_Primary_MAG_IENVIRONMENTDAMAGE = 25
@@ -1455,6 +1463,11 @@ Gauntlet_Secondary_MAG_ISOUNDRANGE=20
 Gauntlet_BM_UIImage="img:///UILibrary_LWOTC.InventoryArt.Inv_Beam_PowerGauntlet"
 Gauntlet_Primary_BEAM_BASEDAMAGE=(Damage=8, Spread=2, PlusOne=50, Crit=0, Pierce=0, Shred=2, Tag="", DamageType="Explosion")
 Gauntlet_Secondary_BEAM_BASEDAMAGE=(Damage=9, Spread=2, PlusOne=0, Crit=0, Pierce=0, Shred=0, Tag="", DamageType="Napalm")
+
++Gauntlet_Primary_BEAM_EXTRADAMAGE=(Damage=3, Spread=0, PlusOne=50, Crit=0, Pierce=0, Shred=0, Tag="LWConcussionRocket", DamageType="Explosion")
++Gauntlet_Primary_BEAM_EXTRADAMAGE=(Damage=4, Spread=0, PlusOne=50, Crit=0, Pierce=0, Shred=5, Rupture = 3, Tag="LWShredderRocket", DamageType="Explosion")
++Gauntlet_Primary_BEAM_EXTRADAMAGE=(Damage=3, Spread=0, PlusOne=50, Crit=0, Pierce=0, Shred=0, Rupture = 0, Tag="LWEMPRocket", DamageType="Electrical")
+
 
 ; *** BEAM ***
 Gauntlet_Primary_BEAM_ICLIPSIZE = 1
