Add armor to available underinfiltration penalties
Not for LW, but for MJ/TJ environment

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -1776,6 +1776,11 @@ UNDERINFILTRATION_HP_MODS[1]=1.3f
 UNDERINFILTRATION_HP_MODS[2]=1.4f
 UNDERINFILTRATION_HP_MODS[3]=1.5f
 
+UNDERINFILTRATION_ARMOR_MODS[0]=0
+UNDERINFILTRATION_ARMOR_MODS[1]=0
+UNDERINFILTRATION_ARMOR_MODS[2]=0
+UNDERINFILTRATION_ARMOR_MODS[3]=0
+
 [LW_Overhaul.XComGameState_LWReinforcements]
 ; This only works if the continuous reinforcements subsystem is attached to the mission!
 ; Alert modifier. Value to add to reinforcement bucket per turn by REGION STRENGTH.
