Swap Predator and BEO on Templar XCOM decks
make the costs fit better.

--- a/LongWarOfTheChosen/Config/XComClassData.ini
+++ b/LongWarOfTheChosen/Config/XComClassData.ini
@@ -2688,7 +2688,7 @@ bNoSecondaryWeapon=true
 +RandomAbilityDecks=(DeckName="Rank2_XComAbilities", \\
 					Abilities=( (AbilityName="Salvo"), \\
 								(AbilityName="OpenFire_LW"), \\
-								(AbilityName="BringEmOn"), \\
+								(AbilityName="Predator_LW", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 								(AbilityName="TargetFocus_LW"), \\
 								(AbilityName="FullKit") \\
 					))
@@ -2702,7 +2702,7 @@ bNoSecondaryWeapon=true
 					))
 
 +RandomAbilityDecks=(DeckName="Rank4_XComAbilities", \\
-					Abilities=( (AbilityName="Predator_LW", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
+					Abilities=( (AbilityName="BringEmOn"), \\
 								(AbilityName="Aggression"), \\
 								(AbilityName="Blademaster", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 								(AbilityName="LoneWolf"), \\
