Update pod diversity system to handle excluding units from RNF pods
mainly for modded enemy units with Gremlins because that can crash the game.

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -112,6 +112,12 @@ bEnableCityHQs = true
 
 +PodSizeConversions=(Podsize = -1, SameUnitMaxLimit = 3, SameUnitMaxLimitAliens = 2) ;a pod of size not specified (8+), cannot have 4 same normal units or 3 same alien units
 
+; abort pod diversity system based on mission sType to ignore
+; +MissionsToNotDiversify = YourMissionSType
+
+; Enemies that should not be allowed on reinforcement pods:
++NoReinforcementEnemies=FrostTech_M2
++NoReinforcementEnemies=FrostTech_M3
 
 ; Abilities to patch for LWRocketLauncher targeting:
 
