--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -180,11 +180,16 @@ ENABLE_CONCUSSION_ROCKET_SMOKE=false
 CONCUSSION_ROCKET_DAMAGE_VALUE=(Damage=2, Spread=0, PlusOne=0, Crit=0, Pierce=0, Shred=0, Tag="", DamageType="Explosion")
 CONCUSSION_ROCKET_ENV_DAMAGE=5
 
-SHREDDER_ROCKET_DAMAGE_VALUE=(Damage=2, Spread=0, PlusOne=50, Crit=0, Pierce=0, Shred=5, Rupture = 2, Tag="", DamageType="Explosion")
+; This one not used
+;SHREDDER_ROCKET_DAMAGE_VALUE=(Damage=2, Spread=0, PlusOne=50, Crit=0, Pierce=0, Shred=5, Rupture = 2, Tag="", DamageType="Explosion")
+
+
 SHREDDER_ROCKET_RADIUS_METERS=5
 SHREDDER_ROCKET_ENV_DAMAGE=15
 
-EMP_ROCKET_DAMAGE_VALUE=(Damage=1, Spread=0, PlusOne=50, Crit=0, Pierce=0, Shred=0, Rupture = 0, Tag="", DamageType="Electrical")
+; This one not used
+;EMP_ROCKET_DAMAGE_VALUE=(Damage=1, Spread=0, PlusOne=50, Crit=0, Pierce=0, Shred=0, Rupture = 0, Tag="", DamageType="Electrical")
+
 EMP_ROCKET_RADIUS_METERS=4.4
 EMP_ROCKET_ENV_DAMAGE=2
 
