--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -177,7 +177,9 @@ CONCUSSION_WARHEAD_ENVIRONMENT_DMG=10
 CONCUSSION_ROCKET_STUN_CHANCE=20
 ENABLE_CONCUSSION_ROCKET_SMOKE=false
 
-CONCUSSION_ROCKET_DAMAGE_VALUE=(Damage=2, Spread=0, PlusOne=0, Crit=0, Pierce=0, Shred=0, Tag="", DamageType="Explosion")
+; This one not used
+;CONCUSSION_ROCKET_DAMAGE_VALUE=(Damage=2, Spread=0, PlusOne=0, Crit=0, Pierce=0, Shred=0, Tag="", DamageType="Explosion")
+
 CONCUSSION_ROCKET_ENV_DAMAGE=5
 
 ; This one not used
