--- a/LongWarOfTheChosen/Config/XComGameData_CharacterStats.ini
+++ b/LongWarOfTheChosen/Config/XComGameData_CharacterStats.ini
@@ -415,6 +415,15 @@ CharacterBaseStats[eStat_UtilityItems]=3
 [Soldier_VIP X2CharacterTemplate]
 CharacterBaseStats[eStat_Mobility]=15
 
+[Soldier_VIP_Diff_0 X2CharacterTemplate]
+CharacterBaseStats[eStat_Mobility]=15
+
+[Soldier_VIP_Diff_2 X2CharacterTemplate]
+CharacterBaseStats[eStat_Mobility]=15
+
+[Soldier_VIP_Diff_3 X2CharacterTemplate]
+CharacterBaseStats[eStat_Mobility]=15
+
 ; Base-game notes
 ; FlankingCritChance 33 at Diff 0, 1; 40 at 2, 3
 ; Will usually goes up at 1 or 2
