Fix missing line break in AI

--- a/LongWarOfTheChosen/Config/XComAI.ini
+++ b/LongWarOfTheChosen/Config/XComAI.ini
@@ -670,7 +670,8 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 +Behaviors=(BehaviorName=NotHighPriorityEvaluateTarget, NodeType=Sequence, Child[0]=SetNextTarget, Child[1]=TargetIsNotHighPriority)
 +Behaviors=(BehaviorName=TargetIsNotHighPriority, NodeType=Inverter, Child[0]=TargetIsHighPriority)
 +Behaviors=(BehaviorName=TargetIsHighPriority, NodeType=Sequence, Child[0]=TargetHitChanceHigh, Child[1]=TargetIsNotCivilian, Child[2]=TargetIsNotLost, Child[3]=TargetKillableOrFlanked, Child[4]=AddToTargetScore_1000, Child[5]=UpdateBestTarget)
-+Behaviors=(BehaviorName=KillShotEvaluateTarget, NodeType=Sequence, Child[0]=SetNextTarget, Child[1]=TargetHitChanceHigh, Child[2]=TargetIsKillShot)+Behaviors=(BehaviorName=TargetKillableOrFlanked, NodeType=Selector, Child[0]=TargetIsKillable,  Child[1]=IsFlankingTargetWithoutShield)
++Behaviors=(BehaviorName=KillShotEvaluateTarget, NodeType=Sequence, Child[0]=SetNextTarget, Child[1]=TargetHitChanceHigh, Child[2]=TargetIsKillShot)
++Behaviors=(BehaviorName=TargetKillableOrFlanked, NodeType=Selector, Child[0]=TargetIsKillable,  Child[1]=IsFlankingTargetWithoutShield)
 +Behaviors=(BehaviorName=TargetKillableOrFlanked, NodeType=Selector, Child[0]=TargetIsKillable,  Child[1]=IsFlankingTargetWithoutShield)
 
 ; -------------- High priority target shooting (LEU Version) (shoot if kill or target flanked/exposed) -------------
