Redo GP Network Tower schedules
add more enemies, but spread them out more so they aren't all clumped.

--- a/LongWarOfTheChosen/Config/XComEncounters.ini
+++ b/LongWarOfTheChosen/Config/XComEncounters.ini
@@ -1360,6 +1360,21 @@
 ; BOSS ENCOUNTER DEFS FOR Golden Path BROADCAST mission
 ;----------------------------------------------------------------
 
++ConfigurableEncounters=(EncounterID="GP_Broadcast_Codices_LW", \\
+					 MaxSpawnCount=2, \\
+					 OffsetForceLevel=0, \\
+					 OffsetAlertLevel=0, \\
+					 ForceSpawnTemplateNames[0]="Cyberus", \\
+					 ForceSpawnTemplateNames[1]="Cyberus")
+
++ConfigurableEncounters=(EncounterID="GP_Broadcast_Codices_Extreme_LW", \\
+					 MaxSpawnCount=3, \\
+					 OffsetForceLevel=0, \\
+					 OffsetAlertLevel=0, \\
+					 ForceSpawnTemplateNames[0]="Cyberus", \\
+					 ForceSpawnTemplateNames[1]="Cyberus", \\
+					 ForceSpawnTemplateNames[2]="Cyberus")
+
 ;----------------------------------------------------------------
 ; BOSS ENCOUNTER DEFS FOR Golden Path FORTRESS mission
 ;----------------------------------------------------------------
