Fix double tap not bound to weapon on technical xcom deck

--- a/LongWarOfTheChosen/Config/XComClassData.ini
+++ b/LongWarOfTheChosen/Config/XComClassData.ini
@@ -176,7 +176,7 @@ NumInDeck=0
 +RandomAbilityDecks=(DeckName="Rank7_XComAbilities", \\
 					Abilities=( (AbilityName="CloseCombatSpecialist", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 								(AbilityName="HitAndRun", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
-								(AbilityName="DoubleTap2"), \\
+								(AbilityName="DoubleTap2", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 								(AbilityName="Lethal", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 								(AbilityName="CloseEncounters", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon), \\
 								(AbilityName="ShockAndAwe"), \\
