Update kismet for psi gate
also update mid campaign patching

--- a/LongWarOfTheChosen/Config/XComMissionDefs.ini
+++ b/LongWarOfTheChosen/Config/XComMissionDefs.ini
@@ -2176,7 +2176,7 @@
 
 +arrMissions=(MissionName="AdventFacilityPSIGATE_LW", sType="GP_PsiGate_LW", \\
 	MissionFamily="GoldenPath3_LW", \\
-	MapNames[0]="Obj_PsiGate", \\
+	MapNames[0]="Obj_PsiGate_LW", \\
 	MapNames[1]="CIN_PsiGate_PsiGateDiscovered", \\
 	MapNames[2]="UMS_LWCommon", \\
 	RequiredPlotObjectiveTags[0]="GP_PsiGate", \\
