Update GP schedules
adjust psi gate chryssalid spawns, adjust alert levels used for blacksite, forge, psi gate.

--- a/LongWarOfTheChosen/Config/XComEncounters.ini
+++ b/LongWarOfTheChosen/Config/XComEncounters.ini
@@ -1356,6 +1356,23 @@
 ; BOSS ENCOUNTER DEFS FOR Golden Path PSIGATE mission
 ;----------------------------------------------------------------
 
++ConfigurableEncounters=(EncounterID="GP_PsiGate_HiveQueen_LW", \\
+					 MaxSpawnCount=1, \\
+					 OffsetForceLevel=0, \\
+					 OffsetAlertLevel=0, \\
+					 ForceSpawnTemplateNames[0]="HiveQueen", \\
+					 )
+
++ConfigurableEncounters=(EncounterID="GP_PsiGate_GatekeeperSpawn_LW", \\
+					 MaxSpawnCount=8, \\
+					 EncounterFollowerSpawnList="AlienFollowers_LW", \\
+					 OffsetForceLevel=0, \\
+					 OffsetAlertLevel=0, \\
+					 ForceSpawnTemplateNames[0]="Gatekeeper", \\
+					 ForceSpawnTemplateNames[1]="Andromedon", \\
+					 ForceSpawnTemplateNames[2]="Andromedon", \\
+					 )
+
 ;----------------------------------------------------------------
 ; BOSS ENCOUNTER DEFS FOR Golden Path BROADCAST mission
 ;----------------------------------------------------------------
