Swap some abilities to use a shotgun weapon category config array
located in XComLW_SoldierSkills.ini

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -559,6 +559,8 @@ CE_USES_PER_TURN=1
 +CE_ABILITYNAMES=LightEmUp
 +CE_ABILITYNAMES=Deadeye
 
++SHOTGUN_WEAPONCATS = shotgun
+
 [LW_PerkPack_Integrated.X2Ability_XMBPerkAbilitySet]
 
 RAPID_STUN_COOLDOWN = 5
